--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
   </style>
       <a href="exercise-11-my-portfolio.html">Home</a>
-      <a href="exercises.html">Exercise</a>
+      <a href="assets/html/exercises.html">Exercise</a>
       <a href="exercise-10-designs.html">Designs</a>
       <a href="https://www.facebook.com/PorniliusExtra">Facebook</a>
   <div class="wrapper">
